antlr/GraphQLParser.py
# Generated from GraphQL.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class GraphQLParser(Parser):
    grammarFileName = "GraphQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'query'", "'mutation'", "'subscription'",
                    "'{'", "'}'", "'('", "')'", "':'", "'...'", "'fragment'",
                    "'on'", "'true'", "'false'", "'null'", "'['", "']'",
                    "'$'", "'='", "'!'", "'@'", "'schema'", "'extend'",
                    "'scalar'", "'extends'", "'type'", "'implements'",
                    "'&'", "'interface'", "'union'", "'|'", "'enum'", "'input'",
                    "'directive'", "'QUERY'", "'MUTATION'", "'SUBSCRIPTION'",
                    "'FIELD'", "'FRAGMENT_DEFINITION'", "'FRAGMENT_SPREAD'",
                    "'INLINE_FRAGMENT'", "'SCHEMA'", "'SCALAR'", "'OBJECT'",
                    "'FIELD_DEFINITION'", "'ARGUMENT_DEFINITION'", "'INTERFACE'",
                    "'UNION'", "'ENUM'", "'ENUM_VALUE'", "'INPUT_OBJECT'",
                    "'INPUT_FIELD_DEFINITION'", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                    "<INVALID>", "<INVALID>", "','", "<INVALID>", "<INVALID>",
                    "'\uEFBBBF'", "'\uFEFF'", "'\u0000FEFF'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "NAME", "STRING", "BLOCK_STRING", "ID", "FLOAT", "INT",
                     "PUNCTUATOR", "WS", "COMMA", "LineComment", "UNICODE_BOM",
                     "UTF8_BOM", "UTF16_BOM", "UTF32_BOM"]

    RULE_document = 0
    RULE_definition = 1
    RULE_executableDefinition = 2
    RULE_operationDefinition = 3
    RULE_operationType = 4
    RULE_selectionSet = 5
    RULE_selection = 6
    RULE_field = 7
    RULE_arguments = 8
    RULE_argument = 9
    RULE_alias = 10
    RULE_fragmentSpread = 11
    RULE_fragmentDefinition = 12
    RULE_fragmentName = 13
    RULE_typeCondition = 14
    RULE_inlineFragment = 15
    RULE_value = 16
    RULE_intValue = 17
    RULE_floatValue = 18
    RULE_booleanValue = 19
    RULE_stringValue = 20
    RULE_nullValue = 21
    RULE_enumValue = 22
    RULE_listValue = 23
    RULE_objectValue = 24
    RULE_objectField = 25
    RULE_variable = 26
    RULE_variableDefinitions = 27
    RULE_variableDefinition = 28
    RULE_defaultValue = 29
    RULE_type_ = 30
    RULE_namedType = 31
    RULE_listType = 32
    RULE_directives = 33
    RULE_directive = 34
    RULE_typeSystemDefinition = 35
    RULE_typeSystemExtension = 36
    RULE_schemaDefinition = 37
    RULE_rootOperationTypeDefinition = 38
    RULE_schemaExtension = 39
    RULE_operationTypeDefinition = 40
    RULE_description = 41
    RULE_typeDefinition = 42
    RULE_typeExtension = 43
    RULE_scalarTypeDefinition = 44
    RULE_scalarTypeExtension = 45
    RULE_objectTypeDefinition = 46
    RULE_implementsInterfaces = 47
    RULE_fieldsDefinition = 48
    RULE_fieldDefinition = 49
    RULE_argumentsDefinition = 50
    RULE_inputValueDefinition = 51
    RULE_objectTypeExtension = 52
    RULE_interfaceTypeDefinition = 53
    RULE_interfaceTypeExtension = 54
    RULE_unionTypeDefinition = 55
    RULE_unionMemberTypes = 56
    RULE_unionTypeExtension = 57
    RULE_enumTypeDefinition = 58
    RULE_enumValuesDefinition = 59
    RULE_enumValueDefinition = 60
    RULE_enumTypeExtension = 61
    RULE_inputObjectTypeDefinition = 62
    RULE_inputFieldsDefinition = 63
    RULE_inputObjectTypeExtension = 64
    RULE_directiveDefinition = 65
    RULE_directiveLocations = 66
    RULE_directiveLocation = 67
    RULE_executableDirectiveLocation = 68
    RULE_typeSystemDirectiveLocation = 69
    RULE_name = 70

    ruleNames = ["document", "definition", "executableDefinition", "operationDefinition",
                 "operationType", "selectionSet", "selection", "field",
                 "arguments", "argument", "alias", "fragmentSpread", "fragmentDefinition",
                 "fragmentName", "typeCondition", "inlineFragment", "value",
                 "intValue", "floatValue", "booleanValue", "stringValue",
                 "nullValue", "enumValue", "listValue", "objectValue",
                 "objectField", "variable", "variableDefinitions", "variableDefinition",
                 "defaultValue", "type_", "namedType", "listType", "directives",
                 "directive", "typeSystemDefinition", "typeSystemExtension",
                 "schemaDefinition", "rootOperationTypeDefinition", "schemaExtension",
                 "operationTypeDefinition", "description", "typeDefinition",
                 "typeExtension", "scalarTypeDefinition", "scalarTypeExtension",
                 "objectTypeDefinition", "implementsInterfaces", "fieldsDefinition",
                 "fieldDefinition", "argumentsDefinition", "inputValueDefinition",
                 "objectTypeExtension", "interfaceTypeDefinition", "interfaceTypeExtension",
                 "unionTypeDefinition", "unionMemberTypes", "unionTypeExtension",
                 "enumTypeDefinition", "enumValuesDefinition", "enumValueDefinition",
                 "enumTypeExtension", "inputObjectTypeDefinition", "inputFieldsDefinition",
                 "inputObjectTypeExtension", "directiveDefinition", "directiveLocations",
                 "directiveLocation", "executableDirectiveLocation", "typeSystemDirectiveLocation",
                 "name"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    T__44 = 45
    T__45 = 46
    T__46 = 47
    T__47 = 48
    T__48 = 49
    T__49 = 50
    T__50 = 51
    NAME = 52
    STRING = 53
    BLOCK_STRING = 54
    ID = 55
    FLOAT = 56
    INT = 57
    PUNCTUATOR = 58
    WS = 59
    COMMA = 60
    LineComment = 61
    UNICODE_BOM = 62
    UTF8_BOM = 63
    UTF16_BOM = 64
    UTF32_BOM = 65

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.DefinitionContext, i)

        def getRuleIndex(self):
            return GraphQLParser.RULE_document

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDocument"):
                listener.enterDocument(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDocument"):
                listener.exitDocument(self)

    def document(self):

        localctx = GraphQLParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.definition()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                        (1 << GraphQLParser.T__0) | (1 << GraphQLParser.T__1) | (1 << GraphQLParser.T__2) | (
                        1 << GraphQLParser.T__3) | (1 << GraphQLParser.T__9) | (1 << GraphQLParser.T__20) | (
                                1 << GraphQLParser.T__21) | (1 << GraphQLParser.T__22) | (1 << GraphQLParser.T__23) | (
                                1 << GraphQLParser.T__24) | (1 << GraphQLParser.T__27) | (1 << GraphQLParser.T__28) | (
                                1 << GraphQLParser.T__30) | (1 << GraphQLParser.T__31) | (1 << GraphQLParser.T__32) | (
                                1 << GraphQLParser.STRING) | (1 << GraphQLParser.BLOCK_STRING))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def executableDefinition(self):
            return self.getTypedRuleContext(GraphQLParser.ExecutableDefinitionContext, 0)

        def typeSystemDefinition(self):
            return self.getTypedRuleContext(GraphQLParser.TypeSystemDefinitionContext, 0)

        def typeSystemExtension(self):
            return self.getTypedRuleContext(GraphQLParser.TypeSystemExtensionContext, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_definition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDefinition"):
                listener.enterDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDefinition"):
                listener.exitDefinition(self)

    def definition(self):

        localctx = GraphQLParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQLParser.T__0, GraphQLParser.T__1, GraphQLParser.T__2, GraphQLParser.T__3,
                         GraphQLParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.executableDefinition()
                pass
            elif token in [GraphQLParser.T__20, GraphQLParser.T__22, GraphQLParser.T__24, GraphQLParser.T__27,
                           GraphQLParser.T__28, GraphQLParser.T__30, GraphQLParser.T__31, GraphQLParser.T__32,
                           GraphQLParser.STRING, GraphQLParser.BLOCK_STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.typeSystemDefinition()
                pass
            elif token in [GraphQLParser.T__21, GraphQLParser.T__23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.typeSystemExtension()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExecutableDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationDefinition(self):
            return self.getTypedRuleContext(GraphQLParser.OperationDefinitionContext, 0)

        def fragmentDefinition(self):
            return self.getTypedRuleContext(GraphQLParser.FragmentDefinitionContext, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_executableDefinition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExecutableDefinition"):
                listener.enterExecutableDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExecutableDefinition"):
                listener.exitExecutableDefinition(self)

    def executableDefinition(self):

        localctx = GraphQLParser.ExecutableDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_executableDefinition)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQLParser.T__0, GraphQLParser.T__1, GraphQLParser.T__2, GraphQLParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.operationDefinition()
                pass
            elif token in [GraphQLParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.fragmentDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperationDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationType(self):
            return self.getTypedRuleContext(GraphQLParser.OperationTypeContext, 0)

        def selectionSet(self):
            return self.getTypedRuleContext(GraphQLParser.SelectionSetContext, 0)

        def name(self):
            return self.getTypedRuleContext(GraphQLParser.NameContext, 0)

        def variableDefinitions(self):
            return self.getTypedRuleContext(GraphQLParser.VariableDefinitionsContext, 0)

        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_operationDefinition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOperationDefinition"):
                listener.enterOperationDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOperationDefinition"):
                listener.exitOperationDefinition(self)

    def operationDefinition(self):

        localctx = GraphQLParser.OperationDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operationDefinition)
        self._la = 0  # Token type
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphQLParser.T__0, GraphQLParser.T__1, GraphQLParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.operationType()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GraphQLParser.NAME:
                    self.state = 157
                    self.name()

                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GraphQLParser.T__5:
                    self.state = 160
                    self.variableDefinitions()

                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == GraphQLParser.T__19:
                    self.state = 163
                    self.directives()

                self.state = 166
                self.selectionSet()
                pass
            elif token in [GraphQLParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.selectionSet()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperationTypeContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return GraphQLParser.RULE_operationType

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOperationType"):
                listener.enterOperationType(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOperationType"):
                listener.exitOperationType(self)

    def operationType(self):

        localctx = GraphQLParser.OperationTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operationType)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & (
                    (1 << GraphQLParser.T__0) | (1 << GraphQLParser.T__1) | (1 << GraphQLParser.T__2))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectionSetContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selection(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.SelectionContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.SelectionContext, i)

        def getRuleIndex(self):
            return GraphQLParser.RULE_selectionSet

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectionSet"):
                listener.enterSelectionSet(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectionSet"):
                listener.exitSelectionSet(self)

    def selectionSet(self):

        localctx = GraphQLParser.SelectionSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_selectionSet)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(GraphQLParser.T__3)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 174
                self.selection()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == GraphQLParser.T__8 or _la == GraphQLParser.NAME):
                    break

            self.state = 179
            self.match(GraphQLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self):
            return self.getTypedRuleContext(GraphQLParser.FieldContext, 0)

        def fragmentSpread(self):
            return self.getTypedRuleContext(GraphQLParser.FragmentSpreadContext, 0)

        def inlineFragment(self):
            return self.getTypedRuleContext(GraphQLParser.InlineFragmentContext, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_selection

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelection"):
                listener.enterSelection(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelection"):
                listener.exitSelection(self)

    def selection(self):

        localctx = GraphQLParser.SelectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selection)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.field()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.fragmentSpread()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 183
                self.inlineFragment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(GraphQLParser.NameContext, 0)

        def alias(self):
            return self.getTypedRuleContext(GraphQLParser.AliasContext, 0)

        def arguments(self):
            return self.getTypedRuleContext(GraphQLParser.ArgumentsContext, 0)

        def directives(self):
            return self.getTypedRuleContext(GraphQLParser.DirectivesContext, 0)

        def selectionSet(self):
            return self.getTypedRuleContext(GraphQLParser.SelectionSetContext, 0)

        def getRuleIndex(self):
            return GraphQLParser.RULE_field

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterField"):
                listener.enterField(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitField"):
                listener.exitField(self)

    def field(self):

        localctx = GraphQLParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_field)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.state = 186
                self.alias()

            self.state = 189
            self.name()
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == GraphQLParser.T__5:
                self.state = 190
                self.arguments()

            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == GraphQLParser.T__19:
                self.state = 193
                self.directives()

            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == GraphQLParser.T__3:
                self.state = 196
                self.selectionSet()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(GraphQLParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(GraphQLParser.ArgumentContext, i)

        def getRuleIndex(self):
            return GraphQLParser.RULE_arguments

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArguments"):
                listener.enterArguments(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArguments"):
                listener.exitArguments(self)

    def arguments(self):
